			once for the same lookup.  [GL #820]

5143.	[bug]		dnssec-keymgr and dnssec-coverage failed to find
			key files for zone names ending in ".". [GL #560]

5142.	[cleanup]	Removed "configure --disable-rpz-nsip" and
			"--disable-rpz-nsdname" options. "nsip-enable"
			and "nsdname-enable" both now default to yes,
			regardless of compile-time settings. [GL #824]

5141.	[placeholder]

5140.	[bug]		Don't immediately mark existing keys as inactive and
			deleted when running dnssec-keymgr for the first
			time. [GL #117]

5139.	[bug]		If possible, don't use forwarders when priming.
			This ensures we can get root server IP addresses
			from priming query response glue, which may not
			be present if the forwarding server is returning
			minimal responses. [GL #752]

5138.	[bug]		Under some circumstances named could hit an assertion
			failure when doing qname minimization when using
			forwarders. [GL #797]

5137.	[func]		named now logs messages whenever a mirror zone becomes
			usable or unusable for resolution purposes. [GL #818]

5136.	[cleanup]	Check in named-checkconf that allow-update and
			allow-update-forwarding are not set at the
			view/options level; fix documentation. [GL #512]

5135.	[port]		sparc: Use smt_pause() instead of pause. [GL #816]

5134.	[bug]		win32: WSAStartup was not called before getservbyname
			was called. [GL #590]

5133.	[bug]		'rndc managed-keys' didn't handle class and view
			correctly and failed to add new lines between each
			view. [GL !1327]

5132.	[bug]		Fix race condition in cleanup part of dns_dt_create().
			[GL !1323]

5131.	[cleanup]	Address Coverity warnings. [GL #801]

5130.	[cleanup]	Remove support for l10n message catalogs. [GL #709]

5129.	[contrib]	sdlz_helper.c:build_querylist was not properly
			splitting the query string. [GL #798]

5128.	[bug]		Refreshkeytime was not being updated for managed
			keys zones. [GL #784]

5127.	[bug]		rcode.c:maybe_numeric failed to handle NUL in text
			regions. [GL #807]
